# twottle

./: .gitignore  README.md  pyproject.toml
src/twottle/: __init__.py  app.py  config.ini
src/twottle/config/: logger.conf
src/twottle/static/: style.css
src/twottle/views/: base.html  base.tpl  channel.html  channel.tpl  error.html  error.tpl  following.html  games.html  index.html  index.tpl  login.html  login.tpl  search.html  settings.html  settings.tpl  streams.html  watching.html  watching.tpl
